<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPetActivity">

    <EditText
        android:id="@+id/petNameText"
        android:layout_width="261dp"
        android:layout_height="66dp"
        android:layout_marginBottom="348dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/instr"
        android:layout_width="197dp"
        android:layout_height="46dp"
        android:layout_marginBottom="144dp"
        android:gravity="center_horizontal"
        android:text="@string/description"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/petNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="130dp"
        android:layout_weight="0.5"
        android:onClick="Cancel"
        android:padding="5dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petNameText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="72dp"
        android:layout_weight="0.5"
        android:backgroundTint="@color/colorPrimaryDark"
        android:onClick="AddPet"
        android:padding="5dp"
        android:text="@string/add_pet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petNameText"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>